@@ -1,3 +1,4 @@
+20190826 cleanup: remove qsmhook, replaced by preline.
 20190826 code: if $QMAILREMOTE is set, it's invoked instead of qmail-remote.
 20190822 cleanup: remove unused dnsmxip.
 20190822 cleanup: remove unused dnscname.
